--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-    <title>{{ page.title }}</title>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-type">
+    <title>{{ page.title }} | {{ site.title }}</title>
   </head>
   <body>
     <div class="header">
       <h1>{{ page.title }}</h1>
       <!-- Kort introduktion -->
-      
       <!-- Navigationsmeny -->
     </div>
-    <div class="section body">
-      {{ content }}
-    </div>
+    <div class="section body">{{ content }}</div>
     <div class="footer">
       <!-- Snabblänkar -->
     </div>
