--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta content="text/html; charset=utf-8" http-equiv="Content-type">
+    <meta charset="utf-8">
     <title>{{ page.title }} | {{ site.title }}</title>
   </head>
   <body>
