Add ellipsis to “read more”… links

--- a/_src/index.haml
+++ b/_src/index.haml
@@ -21,7 +21,7 @@
 
     %p
       %cite
-        %a{:href => "{{ post.url }}"} Läs mer av “{{ post.title }}”
+        %a{:href => "{{ post.url }}"} Läs mer av “{{ post.title }}”…
     {% else %}
     {{ post.content }}
     {% endif %}
