Add post type (layout) as classname on the <article>

--- a/_src/index.haml
+++ b/_src/index.haml
@@ -6,7 +6,7 @@
 
 %section
   {% for post in site.posts %}
-  %article
+  %article{:class => "{{ post.layout }}"}
     %header
       %h1 {{ post.title }}
       %p
