Unreset the styling for lists… and prepare for future fixes

--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -1,6 +1,6 @@
 @import "compass.scss";
 @import "compass/css3.scss";
-@import "compass/reset.scss";
+@import "reset.scss";
 @import "fonts.scss";
 
 body
