--- a/_src/stylesheets/_reset.scss
+++ b/_src/stylesheets/_reset.scss
@@ -8,3 +8,12 @@ ol, ul
 
 ol li { list-style-type: decimal; }
 ul li { list-style-type: disc; }
+
+nav
+{
+  ol, ul
+  {
+    list-style: none;
+    margin: 0;
+  }
+}
