Add “About me” page

--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -4,7 +4,7 @@
       <a href="/">Artiklar</a>
     </li>
     <li>
-      <a href="/about.html">Om Mig</a>
+      <a href="/about-me.html">Om Mig</a>
     </li>
   </ul>
 </nav>
