--- a/_src/_includes/common/navigation.haml
+++ b/_src/_includes/common/navigation.haml
@@ -4,4 +4,4 @@
       %a{:href => '/'} Artiklar
       
     %li
-      %a{:href => '/about.html'} Om Mig
+      %a{:href => '/about-me.html'} Om Mig
