Refactor file structure and layouts

--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -4,4 +4,5 @@
     <h2>… och hans diverse knasiga — men brillianta — idéer och tankar.</h2>
   </hgroup>
   {% include common/navigation.html %}
+  <div class="clear"></div>
 </header>
