--- a/_src/_includes/common/header.haml
+++ b/_src/_includes/common/header.haml
@@ -3,3 +3,4 @@
     %h1 Kim Burgestrand
     %h2 … och hans diverse knasiga — men brillianta — idéer och tankar.
   {% include common/navigation.html %}
+  .clear
