--- a/_src/stylesheets/_layout.scss
+++ b/_src/stylesheets/_layout.scss
@@ -1,11 +1,10 @@
 // Wrap
-body > header, body > nav,
-body > article, body > section
+body > .main
 {
   margin: 0 auto;
   position: relative;
   width: 42em;
 }
 
-@import "widgets/header.scss";
-@import "widgets/post.scss";
+@import "layout/header.scss";
+@import "post/post.scss";
