--- a/_src/stylesheets/_reset.scss
+++ b/_src/stylesheets/_reset.scss
@@ -1,19 +1,13 @@
 @import "compass/reset.scss";
+@import "reset/nav.scss";
 
-ol, ul
+// CSS3
+section, article, header, footer, nav
 {
-  list-style-position: inside;
-  margin: 0 2em 1em;
+  @include reset-box-model;
+  @include reset-font;
 }
 
-ol li { list-style-type: decimal; }
-ul li { list-style-type: disc; }
-
-nav
-{
-  ol, ul
-  {
-    list-style: none;
-    margin: 0;
-  }
-}
+// Unreset
+pre, code { font-family: monospace; }
+q, blockquote { color: #666; }
