--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,9 @@
     {% include common/head.html %}
   </head>
   <body>
-    {% include common/header.html %}
-    {{ content }}
+    <div class="main">
+      {% include common/header.html %}
+      {{ content }}
+    </div>
   </body>
 </html>
