--- a/_src/index.haml
+++ b/_src/index.haml
@@ -1,28 +1,17 @@
 :plain
   ---
-  layout: default
+  layout: page
   title: Senaste inläggen
   ---
 
 %section
   {% for post in site.posts %}
   %article{:class => "{{ post.layout }}"}
-    %header
-      %h1 {{ post.title }}
-      %p
-        Publicerad
-        %time{:pubdate => 'pubdate', :datetime => "{{ post.date | date_to_xmlschema }}"}
-          {{ post.date | date: "%d %B %Y" }}
-        %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
-
-    {% if post.slug != nil %}
-    %blockquote{:cite => "{{ post.url }}"}
-      %p {{ post.slug }}
-
-    %p
-      %cite
-        %a{:href => "{{ post.url }}"} Läs mer av “{{ post.title }}”…
-    {% else %}
-    {{ post.content }}
+    {% if post.layout == "post" %}
+    {% include index/post.html %}
+    {% elsif post.layout == "quote" %}
+    {% include index/quote.html %}
+    {% elsif post.layout == "link" %}
+    {% include index/link.html %}
     {% endif %}
   {% endfor %}
