--- a/_src/_layouts/post.haml
+++ b/_src/_layouts/post.haml
@@ -7,11 +7,11 @@
       {% include common/header.html %}
     
       %section
-        %article{:class => "{{ post.layout }}"}
-          {% if post.layout == "post" %}
+        %article{:class => "{{ page.layout }}"}
+          {% if page.layout == "post" %}
           {% include post/post.html %}
-          {% elsif post.layout == "quote" %}
+          {% elsif page.layout == "quote" %}
           {% include post/quote.html %}
-          {% elsif post.layout == "link" %}
+          {% elsif page.layout == "link" %}
           {% include post/link.html %}
           {% endif %}
