--- a/_src/stylesheets/main.scss
+++ b/_src/stylesheets/main.scss
@@ -8,6 +8,7 @@ body
   border-top: .3em solid #666;
   color: #333;
 }
+body > .main { font-size: 1.2em; }
 
 .clear { clear: both }
 .hide  { display: none }
