--- a/_src/stylesheets/post/_meta.scss
+++ b/_src/stylesheets/post/_meta.scss
@@ -2,6 +2,8 @@ article
 {
   & > header, & > footer
   {
+    @include clearfix;
+    
     p
     {
       background: #eee;
@@ -10,15 +12,10 @@ article
       margin-bottom: 0;
       padding: .2em .4em;
     }
+    
+    a[rel="permalink"] { float: right }
   }
   
-  & > header p
-  {
-    @include border-top-radius(.2em);
-  }
-  
-  & > footer p
-  {
-    @include border-bottom-radius(.2em);
-  }
+  & > header p { @include border-top-radius(.2em); }
+  & > footer p { @include border-bottom-radius(.2em); }
 }
