--- a/_includes/post/image.html
+++ b/_includes/post/image.html
@@ -1,5 +1,8 @@
-<header>
-  <h1>{{ page.title }}</h1>
+{{ content }}
+{% if page.caption %}
+<p>{{ page.caption }}</p>
+{% endif %}
+<footer>
   <p>
     Publicerad
     <time datetime="{{ page.date | date_to_xmlschema }}" pubdate="pubdate">
@@ -7,10 +10,4 @@
     </time>
     <a href="{{ page.url }}" rel="permalink">permalink</a>
   </p>
-</header>
-{% if page.slug != nil %}
-<blockquote cite="{{ page.url }}">
-  <p>{{ page.slug }}</p>
-</blockquote>
-{% endif %}
-{{ content }}
+</footer>
