--- a/_src/_includes/post/image.haml
+++ b/_src/_includes/post/image.haml
@@ -1,14 +1,12 @@
-%header
-  %h1 {{ page.title }}
+{{ content }}
+
+{% if page.caption %}
+%p {{ page.caption }}
+{% endif %}
+
+%footer
   %p
     Publicerad
     %time{:pubdate => 'pubdate', :datetime => "{{ page.date | date_to_xmlschema }}"}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
-
-{% if page.slug != nil %}
-%blockquote{:cite => "{{ page.url }}"}
-  %p {{ page.slug }}
-{% endif %}
-
-{{ content }}
