Adjust margin around post metadata paragraph

--- a/_src/stylesheets/post/_meta.scss
+++ b/_src/stylesheets/post/_meta.scss
@@ -9,12 +9,22 @@ article
       background: #eee;
       font-size: .8em;
       color: #999;
+      margin: 0;
       padding: .2em .4em;
     }
     
     a[rel="permalink"] { float: right }
   }
   
-  & > header p { @include border-top-radius(.2em); }
-  & > footer p { @include border-bottom-radius(.2em); }
+  & > header p
+  {
+    margin: .5em 0 1em;
+    @include border-top-radius(.2em);
+  }
+  
+  & > footer p
+  {
+    margin: .5em 0 0;
+    @include border-bottom-radius(.2em);
+  }
 }
