--- a/_src/_layouts/image.haml
+++ b/_src/_layouts/image.haml
@@ -1,19 +1,1 @@
-!!!
-%html
-  %head
-    {% include common/head.html %}
-  %body
-    %div.main
-      {% include common/header.html %}
-    
-      %section
-        %article{:class => "{{ page.layout }}"}
-          {% if page.layout == "post" %}
-          {% include post/post.html %}
-          {% elsif page.layout == "quote" %}
-          {% include post/quote.html %}
-          {% elsif page.layout == "link" %}
-          {% include post/link.html %}
-          {% elsif page.layout == "image" %}
-          {% include post/image.html %}
-          {% endif %}
+post.haml
