Add tracker codes

--- a/_src/_layouts/post.haml
+++ b/_src/_layouts/post.haml
@@ -17,3 +17,5 @@
           {% elsif page.layout == "image" %}
           {% include post/image.html %}
           {% endif %}
+    
+    {% include common/tracker.html %}
