Update content on “About me” page

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -1,1 +1,50 @@
-../about-me.markdown
+:plain
+  ---
+  layout: page
+  title: About Me
+  date: 2010-11-14 13:52:46 CET
+  ---
+
+%article{:class => 'about-me'}
+  %header
+    %h1 Kim Burgestrand
+  
+  :markdown
+    ![Me!](/images/me.jpg)
+    Likes
+    : readable *clean* code, learning, teaching
+    
+    Does
+    : web & library development, martial arts, juggling, wakeboarding
+    
+    Exists
+    : [github][], [twitter][], [phpportalen][], [email][]
+    
+    [github]: http://github.com/Burgestrand
+    [twitter]: http://twitter.com/Burgestrand
+    [phpportalen]: http://www.phpportalen.net/profile.php?mode=viewprofile&u=9735
+    [email]: mailto: kim @ burgestrand.se
+  
+  .clear
+  :markdown
+    I’m a Swedish programmer brought up on an island named [Resarö][] in the
+    Stockholm archipelago. I currently live with my girlfriend in Gothenburg,
+    where I study computer science at Gothenburg University.
+    
+    I love creating beautiful things using code, and here are some of my babies:
+    
+    [Hallon](https://github.com/Burgestrand/Hallon)
+    : Ruby bindings for the official [Spotify](http://spotify.com) API.
+    
+    [Dimma](https://github.com/Burgestrand/Dimma)
+    : A ruby library for the [Beacon](http://beaconpush.com/) REST API.
+    
+    [vlad-nginx](https://github.com/Burgestrand/vlad-nginx)
+    : NGiNX recipe for Vlad the Deployer.
+    
+    [radiofy.se](http://beta.radiofy.se/) <small>(co-developer)</small>
+    : A website built around a service where we aggregate data from Swedish radio
+      stations and put their music into (automatically updated) Spotify playlists
+      grouped by channel.
+    
+    [Resarö]: http://bit.ly/aPtQxr
