--- a/_src/stylesheets/_layout.scss
+++ b/_src/stylesheets/_layout.scss
@@ -17,3 +17,5 @@ article + article
 @import "post/meta.scss";
 @import "post/post.scss";
 @import "post/image.scss";
+
+@import "page/about-me.scss";
