Add RoR note on radiofy.se

--- a/_src/about-me.haml
+++ b/_src/about-me.haml
@@ -45,6 +45,6 @@
     [radiofy.se](http://beta.radiofy.se/) <small>(co-developer)</small>
     : A website built around a service where we aggregate data from Swedish radio
       stations and put their music into (automatically updated) Spotify playlists
-      grouped by channel.
+      grouped by channel. <small>(built using ruby on rails)</small>
     
     [Resarö]: http://bit.ly/aPtQxr
