Swedish to English header & navigation

--- a/_includes/common/header.html
+++ b/_includes/common/header.html
@@ -1,7 +1,7 @@
 <header>
   <hgroup>
     <h1>Kim Burgestrand</h1>
-    <h2>… och hans diverse knasiga — men brillianta — idéer och tankar.</h2>
+    <h2>… and his miscellaneous freaky — but brilliant — ideas and thoughts.</h2>
   </hgroup>
   {% include common/navigation.html %}
   <div class="clear"></div>
