--- a/_src/_includes/common/header.haml
+++ b/_src/_includes/common/header.haml
@@ -1,6 +1,6 @@
 %header
   %hgroup
     %h1 Kim Burgestrand
-    %h2 … och hans diverse knasiga — men brillianta — idéer och tankar.
+    %h2 … and his miscellaneous freaky — but brilliant — ideas and thoughts.
   {% include common/navigation.html %}
   .clear
