--- a/_src/_includes/common/navigation.haml
+++ b/_src/_includes/common/navigation.haml
@@ -1,7 +1,7 @@
 %nav
   %ul
     %li
-      %a{:href => '/'} Artiklar
+      %a{:href => '/'} Articles
       
     %li
-      %a{:href => '/about-me.html'} Om Mig
+      %a{:href => '/about-me.html'} About Me
