--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -1,10 +1,10 @@
 <nav>
   <ul>
     <li>
-      <a href="/">Artiklar</a>
+      <a href="/">Articles</a>
     </li>
     <li>
-      <a href="/about-me.html">Om Mig</a>
+      <a href="/about-me.html">About Me</a>
     </li>
   </ul>
 </nav>
