--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -70,43 +70,52 @@ pre, code {
 q, blockquote {
   color: #666; }
 
-/* line 14, ../../_src/stylesheets/_reset.scss */
+/* line 13, ../../_src/stylesheets/_reset.scss */
+em {
+  font-style: italic; }
+
+/* line 15, ../../_src/stylesheets/_reset.scss */
+strong {
+  color: #444;
+  font-weight: bold; }
+
+/* line 20, ../../_src/stylesheets/_reset.scss */
 small {
   font-size: .8em;
   font-weight: normal; }
 
-/* line 19, ../../_src/stylesheets/_reset.scss */
+/* line 25, ../../_src/stylesheets/_reset.scss */
 p {
   margin: 0 0 1em; }
 
-/* line 22, ../../_src/stylesheets/_reset.scss */
+/* line 28, ../../_src/stylesheets/_reset.scss */
 ul, ol {
   list-style-position: inside;
   margin: 0 2em 1em; }
 
-/* line 26, ../../_src/stylesheets/_reset.scss */
+/* line 32, ../../_src/stylesheets/_reset.scss */
 ul li {
   list-style-type: disc; }
 
-/* line 27, ../../_src/stylesheets/_reset.scss */
+/* line 33, ../../_src/stylesheets/_reset.scss */
 ol li {
   list-style-type: decimal; }
 
-/* line 30, ../../_src/stylesheets/_reset.scss */
+/* line 36, ../../_src/stylesheets/_reset.scss */
 dl {
   margin-bottom: 1em; }
-  /* line 34, ../../_src/stylesheets/_reset.scss */
+  /* line 40, ../../_src/stylesheets/_reset.scss */
   dl dt {
     color: #666;
     font-weight: bold; }
-  /* line 39, ../../_src/stylesheets/_reset.scss */
+  /* line 45, ../../_src/stylesheets/_reset.scss */
   dl dd {
     margin: 0 1em; }
-  /* line 40, ../../_src/stylesheets/_reset.scss */
+  /* line 46, ../../_src/stylesheets/_reset.scss */
   dl dd + dt {
     margin-top: .5em; }
 
-/* line 45, ../../_src/stylesheets/_reset.scss */
+/* line 51, ../../_src/stylesheets/_reset.scss */
 nav ol, nav ul {
   list-style: none;
   margin: 0;
@@ -310,3 +319,18 @@ article.about-me header dd {
 /* line 15, ../../_src/stylesheets/page/_about-me.scss */
 article.about-me dl dd {
   margin: 0 0 0 1em; }
+
+/* line 4, ../../_src/stylesheets/page/_404.scss */
+html.not-found body {
+  top: 10em;
+  margin: 0 auto;
+  padding: 1em;
+  position: relative;
+  width: 36em; }
+/* line 13, ../../_src/stylesheets/page/_404.scss */
+html.not-found h1 {
+  margin-bottom: .25em;
+  text-align: center; }
+/* line 18, ../../_src/stylesheets/page/_404.scss */
+html.not-found h2 {
+  font-size: 1.6em; }
