Fix trailing slash bug with tumblr

--- a/_src/404.haml
+++ b/_src/404.haml
@@ -9,7 +9,7 @@
     %p
       I couldn't find the page you were looking for. Some links have moved recently,
       so you might have better luck changing the domain to
-      <a href="http://burgestrand.tumblr.com/" id="tumblr">burgestrand.tumblr.com</a>
+      <a href="http://burgestrand.tumblr.com" id="tumblr">burgestrand.tumblr.com</a>
     
     %h2 Still can’t find it?
     %p
