Style quotes on index-page

--- a/_src/stylesheets/_layout.scss
+++ b/_src/stylesheets/_layout.scss
@@ -17,6 +17,6 @@ article + article
 @import "post/meta.scss";
 @import "post/post.scss";
 @import "post/image.scss";
-
+@import "post/quote.scss";
 @import "page/about-me.scss";
 @import "page/404.scss";
