--- a/_includes/index/quote.html
+++ b/_includes/index/quote.html
@@ -1,5 +1,8 @@
 <h1>
-  <q cite="{{ post.source }}">{{ post.title }}</q>
+  <q cite="{{ post.source }}">
+    <span class="openquote">“</span>
+    {{ post.title }}
+  </q>
 </h1>
 {{ post.content }}
 <footer>
