--- a/_src/_includes/index/quote.haml
+++ b/_src/_includes/index/quote.haml
@@ -1,5 +1,7 @@
 %h1
-  %q{:cite => "{{ post.source }}"} {{ post.title }}
+  %q{:cite => "{{ post.source }}"}
+    <span class="openquote">“</span>
+    {{ post.title }}
 
 {{ post.content }}
 
