--- a/_includes/post/quote.html
+++ b/_includes/post/quote.html
@@ -1,5 +1,11 @@
-<header>
-  <h1>{{ page.title }}</h1>
+<h1>
+  <q cite="{{ page.source }}">
+    <span class="openquote">“</span>
+    {{ page.title }}
+  </q>
+</h1>
+{{ content }}
+<footer>
   <p>
     Publicerad
     <time datetime="{{ page.date | date_to_xmlschema }}" pubdate="pubdate">
@@ -7,5 +13,4 @@
     </time>
     <a href="{{ page.url }}" rel="permalink">permalink</a>
   </p>
-</header>
-{{ content }}
+</footer>
