--- a/_src/_includes/post/quote.haml
+++ b/_src/_includes/post/quote.haml
@@ -1,9 +1,13 @@
-%header
-  %h1 {{ page.title }}
+%h1
+  %q{:cite => "{{ page.source }}"}
+    <span class="openquote">“</span>
+    {{ page.title }}
+
+{{ content }}
+
+%footer
   %p
     Publicerad
     %time{:pubdate => 'pubdate', :datetime => "{{ page.date | date_to_xmlschema }}"}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
-
-{{ content }}
