--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -307,11 +307,11 @@ article.image footer h1 {
   color: #666; }
 
 /* line 4, ../../_src/stylesheets/post/_quote.scss */
-article.quote > h1 {
+article.quote h1 {
   font-size: 1.4em;
   margin-bottom: .5em; }
   /* line 9, ../../_src/stylesheets/post/_quote.scss */
-  article.quote > h1 .openquote {
+  article.quote h1 .openquote {
     color: #AAA;
     height: .1em;
     font-family: 'Georgia';
@@ -324,13 +324,13 @@ article.quote > h1 {
     *display: inline;
     *vertical-align: auto; }
   /* line 19, ../../_src/stylesheets/post/_quote.scss */
-  article.quote > h1 q {
+  article.quote h1 q {
     color: #333; }
   /* line 22, ../../_src/stylesheets/post/_quote.scss */
-  article.quote > h1 + p {
-    color: #999; }
+  article.quote h1 + p {
+    color: #666; }
     /* line 23, ../../_src/stylesheets/post/_quote.scss */
-    article.quote > h1 + p:before {
+    article.quote h1 + p:before {
       content: "— "; }
 
 /* line 3, ../../_src/stylesheets/page/_about-me.scss */
