--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -1,3 +1,4 @@
 <meta charset="utf-8">
 <link href="/stylesheets/compiled/main.css" rel="stylesheet">
+<link href="{{ site.base_uri }}/feed.xml" rel="alternate" title="RSS" type="application/rss+xml">
 <title>{{ page.title }} {{ site.title }}</title>
