--- a/_src/_includes/common/head.haml
+++ b/_src/_includes/common/head.haml
@@ -1,3 +1,4 @@
 %meta{:charset => 'utf-8'}
 %link{:href => '/stylesheets/compiled/main.css', :rel => 'stylesheet'}
+%link{:href => "{{ site.base_uri }}/feed.xml", :rel => 'alternate', :type => 'application/rss+xml', :title => 'RSS'}
 %title {{ page.title }} {{ site.title }}
