--- a/_src/feed.haml
+++ b/_src/feed.haml
@@ -6,7 +6,7 @@
 <?xml version="1.0" encoding="utf-8"?> 
 %rss{:version => "2.0"}
   %channel
-    %title {{ page.title }} {{ site.title }}
+    %title Latest posts {{ site.title }}
     %link  {{ site.base_uri }}/
     %description
       Kim Burgestrand and his miscellaneous freaky — but brilliant — ideas
