--- a/_includes/index/post.html
+++ b/_includes/index/post.html
@@ -2,7 +2,7 @@
   <h1>{{ post.title }}</h1>
   <p>
     Publicerad
-    <time datetime="{{ post.date | date_to_xmlschema }}" pubdate="pubdate">
+    <time datetime="{{ post.date }}" pubdate="pubdate">
       {{ post.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ post.url }}" rel="permalink">permalink</a>
