--- a/_includes/post/image.html
+++ b/_includes/post/image.html
@@ -5,7 +5,7 @@
 <footer>
   <p>
     Publicerad
-    <time datetime="{{ page.date | date_to_xmlschema }}" pubdate="pubdate">
+    <time datetime="{{ page.date }}" pubdate="pubdate">
       {{ page.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ page.url }}" rel="permalink">permalink</a>
