--- a/_includes/post/quote.html
+++ b/_includes/post/quote.html
@@ -8,7 +8,7 @@
 <footer>
   <p>
     Publicerad
-    <time datetime="{{ page.date | date_to_xmlschema }}" pubdate="pubdate">
+    <time datetime="{{ page.date }}" pubdate="pubdate">
       {{ page.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ page.url }}" rel="permalink">permalink</a>
