--- a/_src/_includes/index/post.haml
+++ b/_src/_includes/index/post.haml
@@ -2,7 +2,7 @@
   %h1 {{ post.title }}
   %p
     Publicerad
-    %time{:pubdate => 'pubdate', :datetime => "{{ post.date | date_to_xmlschema }}"}
+    %time{:pubdate => 'pubdate', :datetime => "{{ post.date }}"}
       {{ post.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
 
