--- a/_src/_includes/post/image.haml
+++ b/_src/_includes/post/image.haml
@@ -7,6 +7,6 @@
 %footer
   %p
     Publicerad
-    %time{:pubdate => 'pubdate', :datetime => "{{ page.date | date_to_xmlschema }}"}
+    %time{:pubdate => 'pubdate', :datetime => "{{ page.date }}"}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
