--- a/_src/_includes/post/link.haml
+++ b/_src/_includes/post/link.haml
@@ -2,7 +2,7 @@
   %h1 {{ page.title }}
   %p
     Publicerad
-    %time{:pubdate => 'pubdate', :datetime => "{{ page.date | date_to_xmlschema }}"}
+    %time{:pubdate => 'pubdate', :datetime => "{{ page.date }}"}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
 
