--- a/_includes/index/quote.html
+++ b/_includes/index/quote.html
@@ -8,7 +8,7 @@
 <footer>
   <p>
     Publicerad
-    <time datetime="{{ post.date }}" pubdate="pubdate">
+    <time datetime='{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
       {{ post.date | date: "%d %B %Y" }}
     </time>
     <a href="{{ post.url }}" rel="permalink">permalink</a>
