--- a/_src/_includes/index/quote.haml
+++ b/_src/_includes/index/quote.haml
@@ -8,6 +8,6 @@
 %footer
   %p
     Publicerad
-    %time{:pubdate => 'pubdate', :datetime => "{{ post.date }}"}
+    %time{:pubdate => 'pubdate', :datetime => '{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ post.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
