--- a/_src/_includes/post/post.haml
+++ b/_src/_includes/post/post.haml
@@ -2,7 +2,7 @@
   %h1 {{ page.title }}
   %p
     Publicerad
-    %time{:pubdate => 'pubdate', :datetime => "{{ page.date }}"}
+    %time{:pubdate => 'pubdate', :datetime => '{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
 
