--- a/_src/_includes/post/post.haml
+++ b/_src/_includes/post/post.haml
@@ -8,7 +8,7 @@
 
 {% if page.slug != nil %}
 %blockquote{:cite => "{{ page.url }}"}
-  %p {{ page.slug }}
+  {{ page.slug | textilize }}
 {% endif %}
 
 {{ content }}
