--- a/_includes/post/post.html
+++ b/_includes/post/post.html
@@ -10,7 +10,7 @@
 </header>
 {% if page.slug != nil %}
 <blockquote cite="{{ page.url }}">
-  <p>{{ page.slug }}</p>
+  {{ page.slug | textilize }}
 </blockquote>
 {% endif %}
 {{ content }}
