--- a/stylesheets/compiled/main.css
+++ b/stylesheets/compiled/main.css
@@ -1,4 +1,5 @@
-/* line 14, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+@charset "UTF-8";
+/* line 14, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -17,36 +18,36 @@ table, caption, tbody, tfoot, thead, tr, th, td {
   font-family: inherit;
   vertical-align: baseline; }
 
-/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 body {
   line-height: 1;
   color: black;
   background: white; }
 
-/* line 19, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 19, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none; }
 
-/* line 21, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 21, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: separate;
   border-spacing: 0;
   vertical-align: middle; }
 
-/* line 23, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 23, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle; }
 
-/* line 25, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 25, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: "" ""; }
-  /* line 96, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+  /* line 96, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
   q:before, q:after, blockquote:before, blockquote:after {
     content: ""; }
 
-/* line 27, ../../../../.rvm/gems/ruby-1.8.7-p302/gems/compass-0.10.5/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 27, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none; }
 
@@ -166,6 +167,10 @@ h1, h2 {
 h1 {
   font-size: 2.5em;
   line-height: 1.33em; }
+
+/* line 14, ../../_src/stylesheets/typography/_flow.scss */
+.highlight {
+  margin: 0 0 1em; }
 
 /* line 8, ../../_src/stylesheets/_typography.scss */
 hgroup {
@@ -329,8 +334,10 @@ article.quote h1 {
     -moz-box-orient: vertical;
     display: inline-block;
     vertical-align: middle;
-    *display: inline;
     *vertical-align: auto; }
+    /* line 7, ../../../../.rvm/gems/ruby-1.9.2-p136/gems/compass-0.10.6/frameworks/compass/stylesheets/compass/css3/_inline-block.scss */
+    article.quote h1 .openquote {
+      *display: inline; }
   /* line 19, ../../_src/stylesheets/post/_quote.scss */
   article.quote h1 q {
     color: #333; }
@@ -374,3 +381,318 @@ html.not-found h1 {
 /* line 18, ../../_src/stylesheets/page/_404.scss */
 html.not-found h2 {
   font-size: 1.6em; }
+
+/* line 1, ../../_src/stylesheets/_highlight.scss */
+.highlight {
+  background: #ffffff; }
+
+/* line 2, ../../_src/stylesheets/_highlight.scss */
+.highlight .c {
+  color: #999988;
+  font-style: italic; }
+
+/* Comment */
+/* line 3, ../../_src/stylesheets/_highlight.scss */
+.highlight .err {
+  color: #a61717;
+  background-color: #e3d2d2; }
+
+/* Error */
+/* line 4, ../../_src/stylesheets/_highlight.scss */
+.highlight .k {
+  font-weight: bold; }
+
+/* Keyword */
+/* line 5, ../../_src/stylesheets/_highlight.scss */
+.highlight .o {
+  font-weight: bold; }
+
+/* Operator */
+/* line 6, ../../_src/stylesheets/_highlight.scss */
+.highlight .cm {
+  color: #999988;
+  font-style: italic; }
+
+/* Comment.Multiline */
+/* line 7, ../../_src/stylesheets/_highlight.scss */
+.highlight .cp {
+  color: #999999;
+  font-weight: bold; }
+
+/* Comment.Preproc */
+/* line 8, ../../_src/stylesheets/_highlight.scss */
+.highlight .c1 {
+  color: #999988;
+  font-style: italic; }
+
+/* Comment.Single */
+/* line 9, ../../_src/stylesheets/_highlight.scss */
+.highlight .cs {
+  color: #999999;
+  font-weight: bold;
+  font-style: italic; }
+
+/* Comment.Special */
+/* line 10, ../../_src/stylesheets/_highlight.scss */
+.highlight .gd {
+  color: #000000;
+  background-color: #ffdddd; }
+
+/* Generic.Deleted */
+/* line 11, ../../_src/stylesheets/_highlight.scss */
+.highlight .gd .x {
+  color: #000000;
+  background-color: #ffaaaa; }
+
+/* Generic.Deleted.Specific */
+/* line 12, ../../_src/stylesheets/_highlight.scss */
+.highlight .ge {
+  font-style: italic; }
+
+/* Generic.Emph */
+/* line 13, ../../_src/stylesheets/_highlight.scss */
+.highlight .gr {
+  color: #aa0000; }
+
+/* Generic.Error */
+/* line 14, ../../_src/stylesheets/_highlight.scss */
+.highlight .gh {
+  color: #999999; }
+
+/* Generic.Heading */
+/* line 15, ../../_src/stylesheets/_highlight.scss */
+.highlight .gi {
+  color: #000000;
+  background-color: #ddffdd; }
+
+/* Generic.Inserted */
+/* line 16, ../../_src/stylesheets/_highlight.scss */
+.highlight .gi .x {
+  color: #000000;
+  background-color: #aaffaa; }
+
+/* Generic.Inserted.Specific */
+/* line 17, ../../_src/stylesheets/_highlight.scss */
+.highlight .go {
+  color: #888888; }
+
+/* Generic.Output */
+/* line 18, ../../_src/stylesheets/_highlight.scss */
+.highlight .gp {
+  color: #555555; }
+
+/* Generic.Prompt */
+/* line 19, ../../_src/stylesheets/_highlight.scss */
+.highlight .gs {
+  font-weight: bold; }
+
+/* Generic.Strong */
+/* line 20, ../../_src/stylesheets/_highlight.scss */
+.highlight .gu {
+  color: #aaaaaa; }
+
+/* Generic.Subheading */
+/* line 21, ../../_src/stylesheets/_highlight.scss */
+.highlight .gt {
+  color: #aa0000; }
+
+/* Generic.Traceback */
+/* line 22, ../../_src/stylesheets/_highlight.scss */
+.highlight .kc {
+  font-weight: bold; }
+
+/* Keyword.Constant */
+/* line 23, ../../_src/stylesheets/_highlight.scss */
+.highlight .kd {
+  font-weight: bold; }
+
+/* Keyword.Declaration */
+/* line 24, ../../_src/stylesheets/_highlight.scss */
+.highlight .kp {
+  font-weight: bold; }
+
+/* Keyword.Pseudo */
+/* line 25, ../../_src/stylesheets/_highlight.scss */
+.highlight .kr {
+  font-weight: bold; }
+
+/* Keyword.Reserved */
+/* line 26, ../../_src/stylesheets/_highlight.scss */
+.highlight .kt {
+  color: #445588;
+  font-weight: bold; }
+
+/* Keyword.Type */
+/* line 27, ../../_src/stylesheets/_highlight.scss */
+.highlight .m {
+  color: #009999; }
+
+/* Literal.Number */
+/* line 28, ../../_src/stylesheets/_highlight.scss */
+.highlight .s {
+  color: #d14; }
+
+/* Literal.String */
+/* line 29, ../../_src/stylesheets/_highlight.scss */
+.highlight .na {
+  color: #008080; }
+
+/* Name.Attribute */
+/* line 30, ../../_src/stylesheets/_highlight.scss */
+.highlight .nb {
+  color: #0086B3; }
+
+/* Name.Builtin */
+/* line 31, ../../_src/stylesheets/_highlight.scss */
+.highlight .nc {
+  color: #445588;
+  font-weight: bold; }
+
+/* Name.Class */
+/* line 32, ../../_src/stylesheets/_highlight.scss */
+.highlight .no {
+  color: #008080; }
+
+/* Name.Constant */
+/* line 33, ../../_src/stylesheets/_highlight.scss */
+.highlight .ni {
+  color: #800080; }
+
+/* Name.Entity */
+/* line 34, ../../_src/stylesheets/_highlight.scss */
+.highlight .ne {
+  color: #990000;
+  font-weight: bold; }
+
+/* Name.Exception */
+/* line 35, ../../_src/stylesheets/_highlight.scss */
+.highlight .nf {
+  color: #990000;
+  font-weight: bold; }
+
+/* Name.Function */
+/* line 36, ../../_src/stylesheets/_highlight.scss */
+.highlight .nn {
+  color: #555555; }
+
+/* Name.Namespace */
+/* line 37, ../../_src/stylesheets/_highlight.scss */
+.highlight .nt {
+  color: #000080; }
+
+/* Name.Tag */
+/* line 38, ../../_src/stylesheets/_highlight.scss */
+.highlight .nv {
+  color: #008080; }
+
+/* Name.Variable */
+/* line 39, ../../_src/stylesheets/_highlight.scss */
+.highlight .ow {
+  font-weight: bold; }
+
+/* Operator.Word */
+/* line 40, ../../_src/stylesheets/_highlight.scss */
+.highlight .w {
+  color: #bbbbbb; }
+
+/* Text.Whitespace */
+/* line 41, ../../_src/stylesheets/_highlight.scss */
+.highlight .mf {
+  color: #009999; }
+
+/* Literal.Number.Float */
+/* line 42, ../../_src/stylesheets/_highlight.scss */
+.highlight .mh {
+  color: #009999; }
+
+/* Literal.Number.Hex */
+/* line 43, ../../_src/stylesheets/_highlight.scss */
+.highlight .mi {
+  color: #009999; }
+
+/* Literal.Number.Integer */
+/* line 44, ../../_src/stylesheets/_highlight.scss */
+.highlight .mo {
+  color: #009999; }
+
+/* Literal.Number.Oct */
+/* line 45, ../../_src/stylesheets/_highlight.scss */
+.highlight .sb {
+  color: #d14; }
+
+/* Literal.String.Backtick */
+/* line 46, ../../_src/stylesheets/_highlight.scss */
+.highlight .sc {
+  color: #d14; }
+
+/* Literal.String.Char */
+/* line 47, ../../_src/stylesheets/_highlight.scss */
+.highlight .sd {
+  color: #d14; }
+
+/* Literal.String.Doc */
+/* line 48, ../../_src/stylesheets/_highlight.scss */
+.highlight .s2 {
+  color: #d14; }
+
+/* Literal.String.Double */
+/* line 49, ../../_src/stylesheets/_highlight.scss */
+.highlight .se {
+  color: #d14; }
+
+/* Literal.String.Escape */
+/* line 50, ../../_src/stylesheets/_highlight.scss */
+.highlight .sh {
+  color: #d14; }
+
+/* Literal.String.Heredoc */
+/* line 51, ../../_src/stylesheets/_highlight.scss */
+.highlight .si {
+  color: #d14; }
+
+/* Literal.String.Interpol */
+/* line 52, ../../_src/stylesheets/_highlight.scss */
+.highlight .sx {
+  color: #d14; }
+
+/* Literal.String.Other */
+/* line 53, ../../_src/stylesheets/_highlight.scss */
+.highlight .sr {
+  color: #009926; }
+
+/* Literal.String.Regex */
+/* line 54, ../../_src/stylesheets/_highlight.scss */
+.highlight .s1 {
+  color: #d14; }
+
+/* Literal.String.Single */
+/* line 55, ../../_src/stylesheets/_highlight.scss */
+.highlight .ss {
+  color: #990073; }
+
+/* Literal.String.Symbol */
+/* line 56, ../../_src/stylesheets/_highlight.scss */
+.highlight .bp {
+  color: #999999; }
+
+/* Name.Builtin.Pseudo */
+/* line 57, ../../_src/stylesheets/_highlight.scss */
+.highlight .vc {
+  color: #008080; }
+
+/* Name.Variable.Class */
+/* line 58, ../../_src/stylesheets/_highlight.scss */
+.highlight .vg {
+  color: #008080; }
+
+/* Name.Variable.Global */
+/* line 59, ../../_src/stylesheets/_highlight.scss */
+.highlight .vi {
+  color: #008080; }
+
+/* Name.Variable.Instance */
+/* line 60, ../../_src/stylesheets/_highlight.scss */
+.highlight .il {
+  color: #009999; }
+
+/* Literal.Number.Integer.Long */
