--- a/_src/_includes/post/quote.haml
+++ b/_src/_includes/post/quote.haml
@@ -7,7 +7,7 @@
 
 %footer
   %p
-    Publicerad
+    Published
     %time{:pubdate => 'pubdate', :datetime => '{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
