--- a/_includes/index/image.html
+++ b/_includes/index/image.html
@@ -4,7 +4,7 @@
 {% endif %}
 <footer>
   <p>
-    Publicerad
+    Published
     <time datetime='{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
       {{ post.date | date: "%d %B %Y" }}
     </time>
