--- a/_includes/index/quote.html
+++ b/_includes/index/quote.html
@@ -7,7 +7,7 @@
 {{ post.content }}
 <footer>
   <p>
-    Publicerad
+    Published
     <time datetime='{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
       {{ post.date | date: "%d %B %Y" }}
     </time>
