--- a/_includes/post/link.html
+++ b/_includes/post/link.html
@@ -1,7 +1,7 @@
 <header>
   <h1>{{ page.title }}</h1>
   <p>
-    Publicerad
+    Published
     <time datetime='{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
       {{ page.date | date: "%d %B %Y" }}
     </time>
