--- a/_includes/post/quote.html
+++ b/_includes/post/quote.html
@@ -7,7 +7,7 @@
 {{ content }}
 <footer>
   <p>
-    Publicerad
+    Published
     <time datetime='{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}' pubdate="pubdate">
       {{ page.date | date: "%d %B %Y" }}
     </time>
