--- a/_src/_includes/index/image.haml
+++ b/_src/_includes/index/image.haml
@@ -6,7 +6,7 @@
 
 %footer
   %p
-    Publicerad
+    Published
     %time{:pubdate => 'pubdate', :datetime => '{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ post.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
