--- a/_src/_includes/index/post.haml
+++ b/_src/_includes/index/post.haml
@@ -1,7 +1,7 @@
 %header
   %h1 {{ post.title }}
   %p
-    Publicerad
+    Published
     %time{:pubdate => 'pubdate', :datetime => '{{ post.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ post.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ post.url }}"} permalink
@@ -11,7 +11,7 @@
   {{ post.slug | textilize }}
 
 %p
-  %a{:href => "{{ post.url }}"} Läs mer av “<cite>{{ post.title }}</cite>”…
+  %a{:href => "{{ post.url }}"} Read more of “<cite>{{ post.title }}</cite>”…
 {% else %}
 {{ post.content }}
 {% endif %}
