--- a/_src/_includes/post/link.haml
+++ b/_src/_includes/post/link.haml
@@ -1,7 +1,7 @@
 %header
   %h1 {{ page.title }}
   %p
-    Publicerad
+    Published
     %time{:pubdate => 'pubdate', :datetime => '{{ page.date | date: "%d %b %Y %H:%M:%S UTC" }}'}
       {{ page.date | date: "%d %B %Y" }}
     %a{:rel => 'permalink', :href => "{{ page.url }}"} permalink
