--- a/_includes/common/head.html
+++ b/_includes/common/head.html
@@ -2,3 +2,16 @@
 <link href="/stylesheets/compiled/main.css" rel="stylesheet">
 <link href="{{ site.base_uri }}/feed.xml" rel="alternate" title="RSS" type="application/rss+xml">
 <title>{{ page.title }} {{ site.title }}</title>
+<script type="text/javascript">
+  //<![CDATA[
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-11712697-1']);
+    _gaq.push(['_trackPageview']);
+    
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  //]]>
+</script>
