--- a/_layouts/link.html
+++ b/_layouts/link.html
@@ -17,6 +17,24 @@
           {% elsif page.layout == "image" %}
           {% include post/image.html %}
           {% endif %}
+          <footer>
+            <h2>Comments <small>(powered by Disqus)</small></h2>
+            <div id="disqus_thread"></div>
+            <script type="text/javascript">
+              //<![CDATA[
+                var disqus_shortname  = 'burgestrand';
+                var disqus_identifier = '{{ page.id }}';
+                var disqus_url        = '{{ site.base_uri }}{{ page.url }}';
+                var disqus_title      = '{{ page.title | replace:"'","\\'" }}';
+                
+                (function() {
+                    var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                    dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+                    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+                })();
+              //]]>
+            </script>
+          </footer>
         </article>
       </section>
     </div>
