Style all blockquotes within posts

--- a/_includes/index/post.html
+++ b/_includes/index/post.html
@@ -9,7 +9,7 @@
   </p>
 </header>
 {% if post.slug != nil %}
-<blockquote cite="{{ post.url }}">
+<blockquote cite="{{ post.url }}" class="slug">
   {{ post.slug | textilize }}
 </blockquote>
 <p>
